# simple-issue-tracker

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt
doc/: class.puml
inc/command/: CreateDatabaseCommand.hpp  ICommand.hpp  NullCommand.hpp
inc/database/: DatabaseFactory.hpp  IDatabase.hpp  MongoDatabase.hpp
inc/input/: IInput.hpp
inc/input/cli/: CommandLineArgument.hpp  CommandLineInput.hpp
src/: CMakeLists.txt  main.cpp
src/command/: CreateDatabaseCommand.cpp  ICommand.cpp
src/database/: DatabaseFactory.cpp  IDatabase.cpp  MongoDatabase.cpp
src/input/: IInput.cpp
src/input/cli/: CommandLineArgument.cpp  CommandLineInput.cpp
test/: CMakeLists.txt  test.cpp
test/command/: CreateDatabaseCommandTests.cpp
test/input/: CommandLineInputTests.cpp
test/input/cli/: CommandLineArgumentTests.cpp
